# CrossBot

./: .gitignore  CLAUDE.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/data/: __init__.py  clue_db.py  loaders.py
backend/app/solver/: __init__.py  candidates.py  csp.py  engine.py  grid.py  llm.py  scoring.py  wordlist.py
backend/data/: .gitkeep
backend/scripts/: fetch_clues.py  fetch_wordlist.py
backend/tests/: test_clue_db.py  test_engine.py  test_grid.py  test_health.py  test_llm.py  test_provider.py  test_solve_api.py  test_solver.py
docs/: ARCHITECTURE.md
extension/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/entrypoints/: background.ts  content.ts
extension/entrypoints/popup/: App.tsx  GridEditor.tsx  index.html  style.css
extension/lib/: grid.ts  messaging.ts  overlay.ts  settings.ts
extension/lib/adapters/: crosshare.ts  index.ts
extension/lib/api/: client.ts
extension/lib/model/: puzzle.ts
extension/tests/: App.test.tsx  crosshare.test.ts  grid.test.ts  overlay.test.ts
extension/tests/fixtures/: crosshare-mini.json
shared/: README.md  puzzle.schema.json
